# todo

./: .pre-commit-config.yaml  README.md  clear_keyring.py  common.py  create_task.py  done.py  main.py  project.py  pyproject.toml  requirements.txt  todo.py  todoist_client.py
.github/: dependabot.yaml
