[project]
name = "todo"
version = "0.0.1"
description = "Create a new Todoist task"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["click>=8.2.1", "keyring>=25.6.0", "todoist-api-python==2.1.3"]

[dependency-groups]
dev = ["ruff>=0.11.12"]

# Configuring Ruff: https://docs.astral.sh/ruff/configuration/
[tool.ruff] # https://docs.astral.sh/ruff/settings/
line-length = 99
fix = true

[tool.ruff.lint] # https://docs.astral.sh/ruff/settings/#lint
# Rules: https://docs.astral.sh/ruff/rules/
extend-select = ["I"]

[tool.ruff.lint.isort] # https://docs.astral.sh/ruff/settings/#lintisort
force-single-line = true # to reduce merge conflicts
lines-after-imports = 2
